# war

./: .gitignore  Cargo.toml
data/shaders/: shaders.yaml
src/: arena.rs  bounds.rs  color.rs  configuration.rs  dimension.rs  engine.rs  graphics.rs  main.rs  position.rs  resource.rs  settings.rs  validation.rs  vector.rs
src/graphics/: buffer.rs  color.rs  error.rs  font.rs  graphics.rs  mod.rs  program.rs  shader.rs  texture.rs  transform.rs
src/ui/: action.rs  button.rs  component.rs  container.rs  dialog.rs  draw.rs  error.rs  event.rs  mod.rs  mouse.rs  shape.rs  spatial.rs  style.rs  system.rs  widget.rs
